<resources>
    <string name="app_name">Trabbel App</string>
    <string name="contentDescriptionMainLogoImage">Pantalla de inicio de la app donde se encuentra el logo de Trabble y su lema Viajar sin problemas</string>
    <string name="emailUser">Empty</string>
    <string name="logoDescription">Logo trabble</string>
    <string name="loggingWelcome">Welcome Back,</string>
    <string name="loggingMessage">Please log in to your account</string>
    <string name="loggingButtonText">Log In</string>
    <string name="textEmail">Email</string>
    <string name="inputEmailHint">Enter your email …</string>
    <string name="textPassword">Password</string>
    <string name="passwordInputHint">Enter your password ...</string>
    <string name="visibilityButtonDescription">Visibility of the password</string>
    <string name="noAccountText">Don\'t have account?</string>
    <string name="createAccountText">Create an account</string>
    <string name="hotelsSectionText">Hoteles</string>
    <string name="pointOfInterestSectionText">Puntos de Interes</string>
    <string name="activitiesSectionText">Actividades</string>
    <string name="homeProfileButtonDescription">Profile of User</string>
    <string name="homeWelcome">Hello,</string>
    <string name="signOutButtonText">Sign Out</string>
    <string name="cardImageDescription">Card Image from RecycleView</string>
    <string name="defaultText">Default Text</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="NoFound">No encontrado</string>
    <string name="icon_visibility_visible"></string>
    <string name="icon_visibility_invisible"></string>
    <string name="darkMode">Dark Mode</string>
    <string name="lightMode">Light Mode</string>
    <string name="setting">Setting</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="hintNameText">Enter your name ...</string>
    <string name="nameText">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="hide">hide</string>
    <string name="have_account">Have you got an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="create_your_new_account">Create your new account</string>
    <string name="enter_your_confirm_password">Enter your confirm password ...</string>
</resources>