<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/loggingLogo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/logoDescription"
        android:scaleX="2"
        android:scaleY="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/icon_trabble_light" />

    <TextView
        android:id="@+id/loggingWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/loggingWelcome"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loggingLogo" />

    <TextView
        android:id="@+id/loggingMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/loggingMessage"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loggingWelcome" />

    <Button
        android:id="@+id/loggingLogInButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/button_box_accent_color"
        android:text="@string/loggingButtonText"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoggingBoxLogIn" />

    <LinearLayout
        android:id="@+id/LoggingBoxLogIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="40dp"
        android:orientation="vertical"
        android:showDividers="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loggingMessage">

        <TextView
            android:id="@+id/loggingEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textEmail" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/loggingEmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/input_box"
            android:ems="10"
            android:hint="@string/inputEmailHint"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="10dp"
            android:scrollbarThumbHorizontal="@null"
            android:scrollbarThumbVertical="@null"
            android:textSize="14sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/loggingPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textPassword" />

        <Space
            android:id="@+id/Space"
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/loggingPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/input_box"
                android:ems="10"
                android:hint="@string/passwordInputHint"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/loggingPasswordVisibilityButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:contentDescription="hide"
                android:fontFamily="@font/hack_nerd_font"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/icon_visibility_invisible"
                android:textAlignment="gravity"
                android:textColor="#B3000000"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/loggingBoxCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loggingLogInButton">

        <TextView
            android:id="@+id/loggingCreateAccountMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noAccountText" />

        <TextView
            android:id="@+id/loggingCreateAccountLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/createAccountText"
            android:textColor="#56C595"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>