<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@color/colorLightBackground">

    <ImageView
        android:id="@+id/signUpLogo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="42dp"
        android:contentDescription="@string/logoDescription"
        android:scaleX="2"
        android:scaleY="2"
        android:src="@drawable/loggingLogoImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signUpWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/loggingWelcome"
        android:textColor="@color/colorText"
        android:textColorLink="@null"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/signUpLogo"
        app:layout_constraintTop_toTopOf="@+id/signUpLogo" />

    <TextView
        android:id="@+id/signUpMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/create_your_new_account"
        android:textColor="@color/colorText"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/signUpWelcome"
        app:layout_constraintTop_toBottomOf="@+id/signUpWelcome" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_box"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toTopOf="@+id/signUpBoxCreateAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/signUpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpMessage">

        <LinearLayout
            android:id="@+id/signUpBoxLogIn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:showDividers="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/signUpName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nameText"
                android:textColor="@color/colorText"
                android:textSize="12sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/signUpNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_box"
                android:ems="10"
                android:hint="@string/hintNameText"
                android:inputType="textPersonName"
                android:minHeight="20dp"
                android:padding="10dp"
                android:scrollbarThumbHorizontal="@null"
                android:scrollbarThumbVertical="@null"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText"
                android:textSize="10sp"
                android:autofillHints="" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/signUpEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textEmail"
                android:textColor="@color/colorText"
                android:textSize="12sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/signUpEmailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/input_box"
                android:ems="10"
                android:hint="@string/inputEmailHint"
                android:inputType="textEmailAddress"
                android:minHeight="20dp"
                android:padding="10dp"
                android:scrollbarThumbHorizontal="@null"
                android:scrollbarThumbVertical="@null"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText"
                android:textSize="10sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/signUpPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textPassword"
                android:textColor="@color/colorText"
                android:textSize="12sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/signUpPasswordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@drawable/input_box"
                    android:ems="10"
                    android:hint="@string/passwordInputHint"
                    android:inputType="textPassword"
                    android:minHeight="20dp"
                    android:padding="10dp"
                    android:textColor="@color/colorText"
                    android:textColorHint="@color/colorText"
                    android:textSize="10sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:id="@+id/signUpPasswordVisibilityButton"
                    android:layout_width="48dp"
                    android:layout_height="0dp"
                    android:background="@null"
                    android:contentDescription="@string/hide"
                    android:fontFamily="@font/hack_nerd_font"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/icon_visibility_invisible"
                    android:textAlignment="gravity"
                    android:textColor="@color/colorText"
                    android:textSize="10sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/signUpConfirmPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"
                android:textColor="@color/colorText"
                android:textSize="12sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/signUpConfirmPasswordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@drawable/input_box"
                    android:ems="10"
                    android:hint="@string/enter_your_confirm_password"
                    android:inputType="textPassword"
                    android:minHeight="20dp"
                    android:padding="10dp"
                    android:textColor="@color/colorText"
                    android:textColorHint="@color/colorText"
                    android:textSize="10sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:id="@+id/signUpConfirmPasswordVisibilityButton"
                    android:layout_width="48dp"
                    android:layout_height="0dp"
                    android:background="@null"
                    android:contentDescription="@string/hide"
                    android:fontFamily="@font/hack_nerd_font"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/icon_visibility_invisible"
                    android:textAlignment="gravity"
                    android:textColor="@color/colorText"
                    android:textSize="10sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/signUpBoxCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/signUpCreateAccountMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_account"
            android:textColor="@color/colorText"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/signUpSignInLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/sign_in"
            android:textColor="@color/colorLink"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>